--- a/Blayer.Data/Blayer.Data.csproj
+++ b/Blayer.Data/Blayer.Data.csproj
@@ -61,12 +61,35 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository.cs" />
     <Compile Include="RepositoryConfiguration.cs" />
+    <Compile Include="Templates\Blayer.AdditionalStep\AdditionalSteps.cs" />
+    <Compile Include="Templates\Blayer.ModelConfiguration\ModelConfiguration.cs" />
+    <Compile Include="Templates\Blayer.Notify\Notify.cs" />
+    <Compile Include="Templates\Blayer.Poco\State.cs" />
+    <Compile Include="Templates\Blayer.Repository\UserRepository.cs" />
+    <Compile Include="Templates\Blayer.Validate\BlogPostValidate.cs" />
+    <Compile Include="Utils\BusinessException.cs" />
+    <Compile Include="Utils\BusinessExceptionType.cs" />
     <Compile Include="Utils\ObjectExtensions.cs" />
     <Compile Include="Utils\PropertyCopy.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Templates\Blayer.AdditionalStep\MyTemplate.vstemplate" />
+    <Content Include="Templates\Blayer.AdditionalStep\__TemplateIcon.png" />
+    <Content Include="Templates\Blayer.ModelConfiguration\MyTemplate.vstemplate" />
+    <Content Include="Templates\Blayer.ModelConfiguration\__TemplateIcon.png" />
+    <Content Include="Templates\Blayer.Notify\MyTemplate.vstemplate" />
+    <Content Include="Templates\Blayer.Notify\__TemplateIcon.png" />
+    <Content Include="Templates\Blayer.Poco\MyTemplate.vstemplate" />
+    <Content Include="Templates\Blayer.Poco\__TemplateIcon.png" />
+    <Content Include="Templates\Blayer.Repository\MyTemplate.vstemplate" />
+    <Content Include="Templates\Blayer.Repository\__TemplateIcon.png" />
+    <Content Include="Templates\Blayer.Validate\MyTemplate.vstemplate" />
+    <Content Include="Templates\Blayer.Validate\__TemplateIcon.png" />
+    <Content Include="Templates\README.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
