Fixing templates being included in build.

--- a/Blayer.Data/Blayer.Data.csproj
+++ b/Blayer.Data/Blayer.Data.csproj
@@ -61,12 +61,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository.cs" />
     <Compile Include="RepositoryConfiguration.cs" />
-    <Compile Include="Templates\Blayer.AdditionalStep\AdditionalSteps.cs" />
-    <Compile Include="Templates\Blayer.ModelConfiguration\ModelConfiguration.cs" />
-    <Compile Include="Templates\Blayer.Notify\Notify.cs" />
-    <Compile Include="Templates\Blayer.Poco\State.cs" />
-    <Compile Include="Templates\Blayer.Repository\UserRepository.cs" />
-    <Compile Include="Templates\Blayer.Validate\BlogPostValidate.cs" />
+    <None Include="Templates\Blayer.AdditionalStep\AdditionalSteps.cs_" />
+    <None Include="Templates\Blayer.ModelConfiguration\ModelConfiguration.cs_" />
+    <None Include="Templates\Blayer.Notify\Notify.cs_" />
+    <None Include="Templates\Blayer.Poco\State.cs_" />
+    <None Include="Templates\Blayer.Repository\UserRepository.cs_" />
+    <None Include="Templates\Blayer.Validate\BlogPostValidate.cs_" />
     <Compile Include="Utils\BusinessException.cs" />
     <Compile Include="Utils\BusinessExceptionType.cs" />
     <Compile Include="Utils\ObjectExtensions.cs" />
