--- a/Blayer.Data/Blayer.Data.nuspec
+++ b/Blayer.Data/Blayer.Data.nuspec
@@ -10,7 +10,10 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
     <releaseNotes>Starter package.</releaseNotes>
-    <copyright>Copyright 2016</copyright>
+    <copyright>Copyright 2017</copyright>
     <tags>Data access</tags>
   </metadata>
+  <files>
+    <file src="Blayer.Data\bin\$configuration$\Blayer.Data.dll" target="lib\net46\" />
+  </files>
 </package>
