--- a/Blayer.Data/Blayer.Data.nuspec
+++ b/Blayer.Data/Blayer.Data.nuspec
@@ -14,6 +14,6 @@
     <tags>Data access</tags>
   </metadata>
   <files>
-    <file src="Blayer.Data\bin\$configuration$\Blayer.Data.dll" target="lib\net46\" />
+    <file src="bin\$configuration$\Blayer.Data.dll" target="lib\net46\" />
   </files>
 </package>
